--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-jshint": "~0.8.0",
+	"grunt-contrib-copy": "~0.5.0",
 	"grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-watch": "~0.5.3"
   }
