--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "distpicker",
-  "description": "A district picker for China.",
-  "version": "0.1.0",
-  "author": "Fengyuan Chen",
-  "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-banner": "~0.2.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.8.0",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-uglify": "~0.2.7",
-    "grunt-contrib-watch": "~0.5.3"
-  }
+    "name": "distpicker",
+    "title": "Distpicker",
+    "description": "A jQuery plugin for pick provinces, citys and districts of Chinese.",
+    "version": "0.1.0",
+    "author": "Fengyuan Chen",
+    "homepage": "https://github.com/fengyuanchen/distpicker",
+    "license": "MIT",
+    "devDependencies": {
+        "grunt": "~0.4.2",
+        "grunt-banner": "~0.2.1",
+        "grunt-contrib-clean": "~0.5.0",
+        "grunt-contrib-concat": "~0.3.0",
+        "grunt-contrib-jshint": "~0.8.0",
+        "grunt-contrib-copy": "~0.5.0",
+        "grunt-contrib-uglify": "~0.3.2",
+        "grunt-contrib-watch": "~0.5.3"
+    }
 }
