--- a/package.json
+++ b/package.json
@@ -2,18 +2,47 @@
     "name": "distpicker",
     "title": "Distpicker",
     "description": "A jQuery plugin for pick provinces, citys and districts of China.",
-    "version": "0.1.0",
-    "author": "Fengyuan Chen",
+    "version": "0.1.2",
+    "keywords": [
+        "html",
+        "css",
+        "javacript",
+        "front-end",
+        "web",
+        "development",
+        "jquery",
+        "plugin",
+        "districts",
+        "picker",
+        "China"
+    ],
+    "author": {
+        "name": "Fengyuan Chen",
+        "url": "https://github.com/fengyuanchen"
+    },
     "homepage": "https://github.com/fengyuanchen/distpicker",
-    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/fengyuanchen/distpicker.git"
+    },
+    "bugs": {
+        "url": "https://github.com/fengyuanchen/distpicker/issues"
+    },
+    "license": {
+        "type": "MIT",
+        "url": "https://github.com/fengyuanchen/distpicker/blob/master/LICENSE"
+    },
+    "dependencies": {
+        "jquery": ">= 1.9.0"
+    },
     "devDependencies": {
         "grunt": "~0.4.2",
         "grunt-banner": "~0.2.1",
         "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-concat": "~0.3.0",
         "grunt-contrib-jshint": "~0.8.0",
-        "grunt-contrib-copy": "~0.5.0",
         "grunt-contrib-uglify": "~0.3.2",
-        "grunt-contrib-watch": "~0.5.3"
+        "grunt-contrib-copy": "~0.5.0",
+        "grunt-contrib-watch": "~0.5.3",
+        "load-grunt-tasks": "~0.4.0"
     }
 }
