--- a/.jshintrc
+++ b/.jshintrc
@@ -1,16 +1,22 @@
 {
-    "boss": true,
-    "curly": true,
-    "eqeqeq": true,
-    "eqnull": true,
-    "expr": true,
-    "immed": true,
-    "noarg": true,
-    "onevar": true,
-    "quotmark": "",
-    "smarttabs": true,
-    "trailing": true,
-    "undef": false,
-    "unused": true,
-    "node": true
+  "asi"      : true,
+  "browser"  : true,
+  "eqeqeq"   : true,
+  "eqnull"   : true,
+  "es3"      : true,
+  "expr"     : true,
+  "jquery"   : true,
+  "latedef"  : true,
+  "laxbreak" : true,
+  "nonbsp"   : true,
+  "strict"   : false,
+  "undef"    : true,
+  "unused"   : true,
+  "globals": {
+    "module": true,
+    "define": true,
+    "require":true,
+    "jQuery": true,
+    "ChineseDistricts": true
+  }
 }
