--- a/bower.json
+++ b/bower.json
@@ -1,39 +1,46 @@
 {
-    "name": "distpicker",
-    "version": "0.1.3",
-    "homepage": "https://github.com/fengyuanchen/distpicker",
-    "authors": [
-        "Fengyuan Chen"
-    ],
-    "description": "A jQuery plugin for pick provinces, citys and districts of China.",
-    "main": [
-        "dist/distpicker.js",
-        "dist/distpicker.data.js"
-    ],
-    "keywords": [
-        "pick districts",
-        "jquery",
-        "plugin",
-        "html",
-        "javacript",
-        "front-end",
-        "web",
-        "development"
-    ],
-    "license": "MIT",
-    "ignore": [
-        "**/.*",
-        "node_modules",
-        "bower_components",
-        "test",
-        "tests",
-        "build",
-        "release",
-        "demos",
-        "assets",
-        "docs"
-    ],
-    "dependencies": {
-        "jquery": ">= 1.9.0"
-    }
+  "name": "distpicker",
+  "description": "A jQuery plugin for picking provinces, cities and districts of China.",
+  "version": "0.2.0",
+  "main": "dist/distpicker.js",
+  "keywords": [
+    "中国",
+    "省市区",
+    "三级联动",
+    "地址选择器",
+    "China",
+    "provinces",
+    "cities",
+    "districts",
+    "picker",
+    "jquery",
+    "plugin",
+    "html",
+    "css",
+    "javacript",
+    "front-end",
+    "web",
+    "development"
+  ],
+  "authors": [{
+    "name": "Fengyuan Chen",
+    "homepage": "https://github.com/fengyuanchen"
+  }],
+  "homepage": "https://github.com/fengyuanchen/distpicker",
+  "license": "MIT",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests",
+    "build",
+    "release",
+    "demos",
+    "assets",
+    "docs"
+  ],
+  "dependencies": {
+    "jquery": ">= 1.9.0"
+  }
 }
