--- a/.jshintrc
+++ b/.jshintrc
@@ -1,22 +1,26 @@
 {
-  "asi"      : true,
-  "browser"  : true,
-  "eqeqeq"   : true,
-  "eqnull"   : true,
-  "es3"      : true,
-  "expr"     : true,
-  "jquery"   : true,
-  "latedef"  : true,
-  "laxbreak" : true,
-  "nonbsp"   : true,
-  "strict"   : false,
-  "undef"    : true,
-  "unused"   : true,
+  "bitwise": true,
+  "curly": true,
+  "eqeqeq": true,
+  "forin": true,
+  "freeze": true,
+  "funcscope": true,
+  "iterator": true,
+  "latedef": true,
+  "noarg": true,
+  "nocomma": false,
+  "noempty": true,
+  "nonbsp": true,
+  "nonew": true,
+  "undef": true,
+  "unused": true,
+  "strict": false,
+  "node": true,
+  "browser": true,
+  "jquery": true,
+  "qunit": true,
   "globals": {
-    "module": true,
     "define": true,
-    "require":true,
-    "jQuery": true,
     "ChineseDistricts": true
   }
 }
