--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "distpicker",
   "description": "A simple jQuery plugin for picking provinces, cities and districts of China.",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "main": "dist/distpicker.js",
   "license": "MIT",
   "repository": "fengyuanchen/distpicker",
@@ -43,10 +43,11 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-jscs": "^3.0.2",
-    "gulp-jshint": "^1.12.0",
-    "gulp-load-plugins": "^1.2.0",
+    "gulp-jshint": "^2.0.1",
+    "gulp-load-plugins": "^1.2.4",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "gulp-uglify": "^1.5.3"
+    "gulp-uglify": "^1.5.3",
+    "jshint": "^2.9.2"
   }
 }
