--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "distpicker",
   "description": "A simple jQuery plugin for picking provinces, cities and districts of China.",
-  "version": "2.0.0-alpha.2",
+  "version": "2.0.0-beta.1",
   "main": "dist/distpicker.js",
   "license": "MIT",
   "repository": "fengyuanchen/distpicker",
@@ -42,20 +42,22 @@
     "jquery": ">= 1.9.1"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
+    "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb-base": "^5.0.3",
-    "eslint-plugin-import": "^1.14.0",
+    "babel-preset-es2015": "^6.16.0",
+    "bootstrap": "^4.0.0-alpha.4",
+    "eslint": "^3.8.0",
+    "eslint-config-airbnb-base": "^8.0.0",
+    "eslint-plugin-import": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-banner": "^0.1.3",
     "gulp-eslint": "^3.0.1",
-    "gulp-load-plugins": "^1.2.2",
+    "gulp-load-plugins": "^1.3.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^2.1.1",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
+    "tether": "^1.3.7",
     "webpack": "^1.13.2",
     "webpack-stream": "^3.2.0"
   }
