--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "distpicker",
   "description": "A simple jQuery plugin for picking provinces, cities and districts of China.",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-beta.2",
   "main": "dist/distpicker.js",
   "license": "MIT",
   "repository": "fengyuanchen/distpicker",
@@ -38,27 +38,28 @@
     "web",
     "development"
   ],
+  "scripts": {
+    "build": "rollup -c",
+    "compress": "uglifyjs dist/distpicker.js -o dist/distpicker.min.js -c -m --comments /^!/",
+    "lint": "eslint src",
+    "postbuild": "npm run compress",
+    "prebuild": "npm run lint",
+    "start": "rollup -c -w"
+  },
   "dependencies": {
     "jquery": ">= 1.9.1"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.16.0",
-    "bootstrap": "^4.0.0-alpha.4",
-    "eslint": "^3.8.0",
-    "eslint-config-airbnb-base": "^8.0.0",
-    "eslint-plugin-import": "^2.0.1",
-    "gulp": "^3.9.1",
-    "gulp-banner": "^0.1.3",
-    "gulp-eslint": "^3.0.1",
-    "gulp-load-plugins": "^1.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.1.1",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "tether": "^1.3.7",
-    "webpack": "^1.13.2",
-    "webpack-stream": "^3.2.0"
+    "babel-plugin-external-helpers": "^6.18.0",
+    "babel-preset-es2015": "^6.18.0",
+    "eslint": "^3.11.1",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "rollup": "^0.36.4",
+    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-commonjs": "^5.0.5",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-watch": "^2.5.0",
+    "uglify-js": "^2.7.5"
   }
 }
