--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "distpicker",
   "description": "A simple jQuery plugin for picking provinces, cities and districts of China.",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0-rc",
   "main": "dist/distpicker.js",
   "license": "MIT",
   "repository": "fengyuanchen/distpicker",
@@ -50,16 +50,16 @@
     "jquery": ">= 1.9.1"
   },
   "devDependencies": {
-    "babel-plugin-external-helpers": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "eslint": "^3.11.1",
+    "babel-plugin-external-helpers": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "eslint": "^3.17.0",
     "eslint-config-airbnb-base": "^10.0.1",
     "eslint-plugin-import": "^2.2.0",
     "rollup": "^0.36.4",
-    "rollup-plugin-babel": "^2.6.1",
+    "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^5.0.5",
     "rollup-plugin-node-resolve": "^2.0.0",
     "rollup-watch": "^2.5.0",
-    "uglify-js": "^2.7.5"
+    "uglify-js": "^2.8.5"
   }
 }
