--- a/package.json
+++ b/package.json
@@ -48,20 +48,21 @@
     "prebuild": "npm run lint",
     "start": "rollup -c -w -m"
   },
-  "dependencies": {
-    "jquery": ">= 1.9.1"
-  },
   "devDependencies": {
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "eslint": "^3.17.0",
-    "eslint-config-airbnb-base": "^10.0.1",
-    "eslint-plugin-import": "^2.2.0",
-    "rollup": "^0.36.4",
-    "rollup-plugin-babel": "^2.7.1",
-    "rollup-plugin-commonjs": "^5.0.5",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-watch": "^2.5.0",
-    "uglify-js": "^2.8.5"
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint-plugin-import": "^2.7.0",
+    "jquery": "^3.2.1",
+    "rollup": "^0.49.2",
+    "rollup-plugin-babel": "^3.0.2",
+    "rollup-plugin-commonjs": "^8.1.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-watch": "^4.3.1",
+    "uglify-js": "^3.0.27"
+  },
+  "peerDependencies": {
+    "jquery": ">= 1.9.1"
   }
 }
