--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "name": "Fengyuan Chen",
     "url": "http://chenfengyuan.com"
   },
+  "files": [
+    "src",
+    "dist"
+  ],
   "keywords": [
     "中国",
     "省份",
@@ -33,6 +37,7 @@
     "picking",
     "jquery",
     "plugin",
+    "jquery-plugin",
     "html",
     "css",
     "javascript",
@@ -43,24 +48,24 @@
   "scripts": {
     "build": "rollup -c",
     "compress": "uglifyjs dist/distpicker.js -o dist/distpicker.min.js -c -m --comments /^!/",
-    "lint": "eslint src",
+    "lint": "eslint src --fix",
     "postbuild": "npm run compress",
     "prebuild": "npm run lint",
-    "start": "rollup -c -w -m"
+    "start": "rollup -c -m -w"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "eslint": "^4.5.0",
-    "eslint-config-airbnb-base": "^11.3.1",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb-base": "^12.0.2",
     "eslint-plugin-import": "^2.7.0",
     "jquery": "^3.2.1",
-    "rollup": "^0.49.2",
+    "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^8.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-watch": "^4.3.1",
-    "uglify-js": "^3.0.27"
+    "uglify-js": "^3.1.3"
   },
   "peerDependencies": {
     "jquery": ">= 1.9.1"
