--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,14 @@
 {
   "presets": [
-    ["env", {
-      "modules": false,
-      "targets": {
-        "browsers": ["last 2 versions", "ie >= 9"]
+    [
+      "env",
+      {
+        "modules": false,
+        "targets": {
+          "browsers": ["last 2 versions", "ie >= 9"]
+        },
+        "loose": true
       }
-    }]
+    ]
   ]
 }
