--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "author": {
     "name": "Chen Fengyuan",
-    "url": "http://chenfengyuan.com"
+    "url": "https://chenfengyuan.com"
   },
   "files": [
     "src",
@@ -55,20 +55,21 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "change-case": "^3.0.2",
     "create-banner": "^1.0.0",
     "del-cli": "^1.1.0",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.12.0",
+    "eslint": "^5.0.1",
+    "eslint-config-airbnb-base": "^13.0.0",
+    "eslint-plugin-import": "^2.13.0",
     "jquery": "^3.3.1",
-    "rollup": "^0.59.4",
-    "rollup-plugin-babel": "^3.0.4",
+    "rollup": "^0.62.0",
+    "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-watch": "^4.3.1",
-    "uglify-js": "^3.3.28"
+    "uglify-js": "^3.4.3"
   },
   "peerDependencies": {
     "jquery": ">= 1.9.1"
