--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,10 @@
 {
   "presets": [
-    ["env", {
-      "modules": false,
-      "targets": {
-        "browsers": ["last 2 versions", "ie >= 9"]
+    [
+      "@babel/preset-env",
+      {
+        "modules": false
       }
-    }]
-  ],
-  "plugins": ["external-helpers"]
+    ]
+  ]
 }
