--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "distpicker",
   "description": "A simple jQuery plugin for picking provinces, cities and districts of China.",
-  "version": "2.0.6",
+  "version": "2.0.7",
   "main": "dist/distpicker.common.js",
   "module": "dist/distpicker.esm.js",
   "browser": "dist/distpicker.js",
@@ -12,9 +12,8 @@
   "scripts": {
     "build": "rollup -c",
     "clear": "del-cli dist",
-    "compress": "uglifyjs dist/distpicker.js -o dist/distpicker.min.js -c -m --comments /^!/",
     "lint": "eslint src *.js --fix",
-    "release": "npm run clear && npm run lint && npm run build && npm run compress",
+    "release": "npm run clear && npm run lint && npm run build",
     "start": "rollup -c -m -w"
   },
   "repository": {
@@ -60,24 +59,24 @@
   },
   "homepage": "https://fengyuanchen.github.io/distpicker",
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "change-case": "^4.1.1",
-    "create-banner": "^1.0.0",
+    "@rollup/plugin-babel": "^5.2.2",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "change-case": "^4.1.2",
+    "create-banner": "^2.0.0-beta",
     "del-cli": "^3.0.1",
-    "eslint": "^7.10.0",
-    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint": "^7.18.0",
+    "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.3.0",
+    "husky": "^4.3.8",
     "jquery": "^3.5.1",
-    "lint-staged": "^10.4.0",
-    "rollup": "^2.28.2",
-    "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "uglify-js": "^3.11.0"
+    "lint-staged": "^10.5.3",
+    "rollup": "^2.38.0",
+    "rollup-plugin-terser": "^7.0.2"
   },
   "peerDependencies": {
     "jquery": ">=1.9.1"
