--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   ],
   "scripts": {
     "build": "rollup -c",
-    "clear": "del-cli dist",
+    "clean": "del-cli dist",
     "lint": "eslint src *.js --fix",
-    "release": "npm run clear && npm run lint && npm run build",
+    "prepare": "husky install",
+    "release": "npm run clean && npm run lint && npm run build",
     "start": "rollup -c -m -w"
   },
   "repository": {
@@ -59,48 +60,26 @@
   },
   "homepage": "https://fengyuanchen.github.io/distpicker",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/preset-env": "^7.12.11",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@rollup/plugin-babel": "^5.2.2",
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@babel/core": "^7.20.7",
+    "@babel/preset-env": "^7.20.2",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^24.0.0",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-terser": "^0.2.1",
     "change-case": "^4.1.2",
-    "create-banner": "^2.0.0-beta",
-    "del-cli": "^3.0.1",
-    "eslint": "^7.18.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "husky": "^4.3.8",
-    "jquery": "^3.5.1",
-    "lint-staged": "^10.5.3",
-    "rollup": "^2.38.0",
-    "rollup-plugin-terser": "^7.0.2"
+    "create-banner": "^2.0.0",
+    "del-cli": "^5.0.0",
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "husky": "^8.0.2",
+    "jquery": "^3.6.3",
+    "lint-staged": "^13.1.0",
+    "rollup": "^3.9.0"
   },
   "peerDependencies": {
     "jquery": ">=1.9.1"
-  },
-  "browserslist": [
-    "last 2 versions",
-    "> 1%",
-    "not ie <= 8"
-  ],
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
-  "lint-staged": {
-    "src/**/*.js|*.config.js": [
-      "eslint --fix",
-      "git add"
-    ]
   }
 }
